fix: update image paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="shopping-cart-list">
         <template x-for="(item, index) in $store.cart.items" x-keys="index">
           <div class="cart-item">
-            <img :src="`/image/${item.img}`" :alt="item.name" />
+            <img :src="`image/${item.img}`" :alt="item.name" />
             <div class="item-detail">
               <h3 x-text="item.name"></h3>
               <div class="item-price">
@@ -108,7 +108,7 @@
       <h2><span>Tentang</span> Kami</h2>
       <div class="row">
         <div class="about-img">
-          <img src="/image/about-me.jpg" alt="Tentang Kami" />
+          <img src="image/about-me.jpg" alt="Tentang Kami" />
         </div>
         <div class="content">
           <h3>Kenapa sih harus mencoba kopi kenangan?</h3>
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="menu-card">
           <img
-            src="/image/menu1.jpg"
+            src="image/menu1.jpg"
             alt="Americano"
             class="menu-card-img"
           />
@@ -144,7 +144,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="/image/menu2.jpg"
+            src="image/menu2.jpg"
             alt="Espresso"
             class="menu-card-img"
           />
@@ -153,7 +153,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="/image/menu3.jpg"
+            src="image/menu3.jpg"
             alt="Mochacino"
             class="menu-card-img"
           />
@@ -162,7 +162,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="/image/menu4.jpg"
+            src="image/menu4.jpg"
             alt="Caramel Latte"
             class="menu-card-img"
           />
@@ -171,7 +171,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="/image/menu5.jpg"
+            src="image/menu5.jpg"
             alt="Coffe Milk"
             class="menu-card-img"
           />
@@ -180,7 +180,7 @@
         </div>
         <div class="menu-card">
           <img
-            src="/image/menu6.jpg"
+            src="image/menu6.jpg"
             alt="Doppio"
             class="menu-card-img"
           />
@@ -201,7 +201,7 @@
           <div class="product-card">
             <div class="product-image">
               <img
-                :src="`/image/${item.img}`"
+                :src="`image/${item.img}`"
                 :alt="item.name"
               />
 
@@ -216,7 +216,7 @@
                   stroke-linejoin="round"
                 >
                   <use
-                    href="/image/feather-sprite.svg#shopping-cart"
+                    href="image/feather-sprite.svg#shopping-cart"
                   />
                 </svg>
               </button>
@@ -233,7 +233,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="/image/feather-sprite.svg#star" />
+                  <use href="image/feather-sprite.svg#star" />
                 </svg>
                 <svg
                   width="24"
@@ -244,7 +244,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="/image/feather-sprite.svg#star" />
+                  <use href="image/feather-sprite.svg#star" />
                 </svg>
                 <svg
                   width="24"
@@ -255,7 +255,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="/image/feather-sprite.svg#star" />
+                  <use href="image/feather-sprite.svg#star" />
                 </svg>
                 <svg
                   width="24"
@@ -266,7 +266,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="/image/feather-sprite.svg#star" />
+                  <use href="image/feather-sprite.svg#star" />
                 </svg>
                 <svg
                   width="24"
@@ -277,7 +277,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="/image/feather-sprite.svg#star" />
+                  <use href="image/feather-sprite.svg#star" />
                 </svg>
               </div>
               <div class="product-price">
